speedrunning/dsl/antlr4-impl/SrDslParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.13.2
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from grammar/SrDslParser.g4 by ANTLR 4.13.2

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.13.2")]
[System.CLSCompliant(false)]
public partial class SrDslParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		GROUPED_BOUND_TYPE=1, TIMER_ACTION=2, COMPARISON=3, MATH_OP=4, CALL=5, 
		CONDITION=6, END=7, ANY=8, ALL=9, TIMER=10, BOUNDS=11, SPLITDEF=12, ORDER=13, 
		IF=14, ELSE=15, ON=16, RUNIMMEDIATE=17, AND=18, FULFILLED=19, DO=20, ANYPOINT=21, 
		QUOTE=22, DOT_ACCESSED=23, PATH=24, NOTEQUAL=25, EQUALS=26, EQUAL2=27, 
		LARROW=28, LARROWEQUAL=29, PLUS=30, MINUS=31, MULTIPLY=32, STRING=33, 
		DIVIDE=34, RARROW=35, RARROWEQUAL=36, COMMENT=37, LBRACKET=38, RBRACKET=39, 
		COMMA=40, TRUE=41, FALSE=42, WHITESPACE=43, FLOAT=44, INTEGER=45, IDENTIFIER=46;
	public const int
		RULE_root = 0, RULE_split_order = 1, RULE_splitdef_node = 2, RULE_runimmediate_node = 3, 
		RULE_any_node = 4, RULE_all_node = 5, RULE_gcn_opt = 6, RULE_gcn_nonopt = 7, 
		RULE_grouped_condition_node_opt = 8, RULE_grouped_condition_node_nonopt = 9, 
		RULE_grouped_condition_node = 10, RULE_condition_node_opt = 11, RULE_condition_node_nonopt = 12, 
		RULE_nongrouped_condition_node_opt = 13, RULE_nongrouped_condition_node_nonopt = 14, 
		RULE_nongrouped_condition_node = 15, RULE_split_logic_node = 16, RULE_logic_node = 17, 
		RULE_call_arg = 18, RULE_call_node = 19, RULE_call_shorthand = 20, RULE_comparison_binaryrh_node = 21, 
		RULE_binary_lh_node = 22, RULE_comparison_full = 23, RULE_comparison_shorthand = 24, 
		RULE_comparison_l = 25, RULE_comparison_andor = 26, RULE_comparison = 27, 
		RULE_binary = 28, RULE_if_branch = 29, RULE_if_statement = 30, RULE_else_statement = 31, 
		RULE_else_if_statement = 32, RULE_timer_node = 33, RULE_event_listen_group = 34, 
		RULE_event_listen = 35, RULE_bounds_grouped = 36, RULE_bounds_object_grouped = 37, 
		RULE_bounds_object_size_grouped = 38, RULE_bounds_condition = 39, RULE_bounds_object = 40, 
		RULE_bounds_object_size = 41, RULE_property_access = 42, RULE_object_condition = 43, 
		RULE_object_condition_component = 44, RULE_datatype = 45, RULE_number = 46, 
		RULE_bool_dt = 47;
	public static readonly string[] ruleNames = {
		"root", "split_order", "splitdef_node", "runimmediate_node", "any_node", 
		"all_node", "gcn_opt", "gcn_nonopt", "grouped_condition_node_opt", "grouped_condition_node_nonopt", 
		"grouped_condition_node", "condition_node_opt", "condition_node_nonopt", 
		"nongrouped_condition_node_opt", "nongrouped_condition_node_nonopt", "nongrouped_condition_node", 
		"split_logic_node", "logic_node", "call_arg", "call_node", "call_shorthand", 
		"comparison_binaryrh_node", "binary_lh_node", "comparison_full", "comparison_shorthand", 
		"comparison_l", "comparison_andor", "comparison", "binary", "if_branch", 
		"if_statement", "else_statement", "else_if_statement", "timer_node", "event_listen_group", 
		"event_listen", "bounds_grouped", "bounds_object_grouped", "bounds_object_size_grouped", 
		"bounds_condition", "bounds_object", "bounds_object_size", "property_access", 
		"object_condition", "object_condition_component", "datatype", "number", 
		"bool_dt"
	};

	private static readonly string[] _LiteralNames = {
		null, null, null, null, null, "'call'", "'condition'", "'end'", "'any'", 
		"'all'", "'timer'", "'bounds'", "'defsplit'", "'order'", "'if'", "'else'", 
		"'on'", "'runimmediate'", "'and'", "'fulfilled'", "'do'", "'anypoint'", 
		"'\"'", null, null, "'!='", "'='", "'=='", "'<'", "'<='", "'+'", "'-'", 
		"'*'", null, "'/'", "'>'", "'>='", null, "'['", "']'", "','", "'true'", 
		"'false'"
	};
	private static readonly string[] _SymbolicNames = {
		null, "GROUPED_BOUND_TYPE", "TIMER_ACTION", "COMPARISON", "MATH_OP", "CALL", 
		"CONDITION", "END", "ANY", "ALL", "TIMER", "BOUNDS", "SPLITDEF", "ORDER", 
		"IF", "ELSE", "ON", "RUNIMMEDIATE", "AND", "FULFILLED", "DO", "ANYPOINT", 
		"QUOTE", "DOT_ACCESSED", "PATH", "NOTEQUAL", "EQUALS", "EQUAL2", "LARROW", 
		"LARROWEQUAL", "PLUS", "MINUS", "MULTIPLY", "STRING", "DIVIDE", "RARROW", 
		"RARROWEQUAL", "COMMENT", "LBRACKET", "RBRACKET", "COMMA", "TRUE", "FALSE", 
		"WHITESPACE", "FLOAT", "INTEGER", "IDENTIFIER"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "SrDslParser.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override int[] SerializedAtn { get { return _serializedATN; } }

	static SrDslParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public SrDslParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public SrDslParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class RootContext : ParserRuleContext {
		public Splitdef_nodeContext _splitdef_node;
		public IList<Splitdef_nodeContext> _splits = new List<Splitdef_nodeContext>();
		[System.Diagnostics.DebuggerNonUserCode] public Split_orderContext split_order() {
			return GetRuleContext<Split_orderContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Eof() { return GetToken(SrDslParser.Eof, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public Splitdef_nodeContext[] splitdef_node() {
			return GetRuleContexts<Splitdef_nodeContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public Splitdef_nodeContext splitdef_node(int i) {
			return GetRuleContext<Splitdef_nodeContext>(i);
		}
		public RootContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_root; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ISrDslParserListener typedListener = listener as ISrDslParserListener;
			if (typedListener != null) typedListener.EnterRoot(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ISrDslParserListener typedListener = listener as ISrDslParserListener;
			if (typedListener != null) typedListener.ExitRoot(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISrDslParserVisitor<TResult> typedVisitor = visitor as ISrDslParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitRoot(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public RootContext root() {
		RootContext _localctx = new RootContext(Context, State);
		EnterRule(_localctx, 0, RULE_root);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 96;
			split_order();
			State = 100;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==SPLITDEF) {
				{
				{
				State = 97;
				_localctx._splitdef_node = splitdef_node();
				_localctx._splits.Add(_localctx._splitdef_node);
				}
				}
				State = 102;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 103;
			Match(Eof);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Split_orderContext : ParserRuleContext {
		public IToken _IDENTIFIER;
		public IList<IToken> _order_def = new List<IToken>();
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ORDER() { return GetToken(SrDslParser.ORDER, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] IDENTIFIER() { return GetTokens(SrDslParser.IDENTIFIER); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode IDENTIFIER(int i) {
			return GetToken(SrDslParser.IDENTIFIER, i);
		}
		public Split_orderContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_split_order; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ISrDslParserListener typedListener = listener as ISrDslParserListener;
			if (typedListener != null) typedListener.EnterSplit_order(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ISrDslParserListener typedListener = listener as ISrDslParserListener;
			if (typedListener != null) typedListener.ExitSplit_order(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISrDslParserVisitor<TResult> typedVisitor = visitor as ISrDslParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitSplit_order(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Split_orderContext split_order() {
		Split_orderContext _localctx = new Split_orderContext(Context, State);
		EnterRule(_localctx, 2, RULE_split_order);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 105;
			Match(ORDER);
			{
			State = 107;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			do {
				{
				{
				State = 106;
				_localctx._IDENTIFIER = Match(IDENTIFIER);
				_localctx._order_def.Add(_localctx._IDENTIFIER);
				}
				}
				State = 109;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			} while ( _la==IDENTIFIER );
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Splitdef_nodeContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SPLITDEF() { return GetToken(SrDslParser.SPLITDEF, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode IDENTIFIER() { return GetToken(SrDslParser.IDENTIFIER, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public Any_nodeContext any_node() {
			return GetRuleContext<Any_nodeContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public All_nodeContext all_node() {
			return GetRuleContext<All_nodeContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Nongrouped_condition_nodeContext nongrouped_condition_node() {
			return GetRuleContext<Nongrouped_condition_nodeContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Runimmediate_nodeContext runimmediate_node() {
			return GetRuleContext<Runimmediate_nodeContext>(0);
		}
		public Splitdef_nodeContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_splitdef_node; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ISrDslParserListener typedListener = listener as ISrDslParserListener;
			if (typedListener != null) typedListener.EnterSplitdef_node(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ISrDslParserListener typedListener = listener as ISrDslParserListener;
			if (typedListener != null) typedListener.ExitSplitdef_node(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISrDslParserVisitor<TResult> typedVisitor = visitor as ISrDslParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitSplitdef_node(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Splitdef_nodeContext splitdef_node() {
		Splitdef_nodeContext _localctx = new Splitdef_nodeContext(Context, State);
		EnterRule(_localctx, 4, RULE_splitdef_node);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 111;
			Match(SPLITDEF);
			State = 112;
			Match(IDENTIFIER);
			State = 117;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case ANY:
				{
				State = 113;
				any_node();
				}
				break;
			case ALL:
				{
				State = 114;
				all_node();
				}
				break;
			case CONDITION:
			case BOUNDS:
			case ON:
				{
				State = 115;
				nongrouped_condition_node();
				}
				break;
			case RUNIMMEDIATE:
				{
				State = 116;
				runimmediate_node();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Runimmediate_nodeContext : ParserRuleContext {
		public Split_logic_nodeContext _split_logic_node;
		public IList<Split_logic_nodeContext> _logic = new List<Split_logic_nodeContext>();
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode RUNIMMEDIATE() { return GetToken(SrDslParser.RUNIMMEDIATE, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public Split_logic_nodeContext[] split_logic_node() {
			return GetRuleContexts<Split_logic_nodeContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public Split_logic_nodeContext split_logic_node(int i) {
			return GetRuleContext<Split_logic_nodeContext>(i);
		}
		public Runimmediate_nodeContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_runimmediate_node; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ISrDslParserListener typedListener = listener as ISrDslParserListener;
			if (typedListener != null) typedListener.EnterRunimmediate_node(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ISrDslParserListener typedListener = listener as ISrDslParserListener;
			if (typedListener != null) typedListener.ExitRunimmediate_node(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISrDslParserVisitor<TResult> typedVisitor = visitor as ISrDslParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitRunimmediate_node(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Runimmediate_nodeContext runimmediate_node() {
		Runimmediate_nodeContext _localctx = new Runimmediate_nodeContext(Context, State);
		EnterRule(_localctx, 6, RULE_runimmediate_node);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 119;
			Match(RUNIMMEDIATE);
			State = 121;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			do {
				{
				{
				State = 120;
				_localctx._split_logic_node = split_logic_node();
				_localctx._logic.Add(_localctx._split_logic_node);
				}
				}
				State = 123;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & 70368744719392L) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Any_nodeContext : ParserRuleContext {
		public Grouped_condition_nodeContext _grouped_condition_node;
		public IList<Grouped_condition_nodeContext> _conditions = new List<Grouped_condition_nodeContext>();
		public Split_logic_nodeContext _split_logic_node;
		public IList<Split_logic_nodeContext> _logic = new List<Split_logic_nodeContext>();
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ANY() { return GetToken(SrDslParser.ANY, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode DO() { return GetToken(SrDslParser.DO, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public Grouped_condition_nodeContext[] grouped_condition_node() {
			return GetRuleContexts<Grouped_condition_nodeContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public Grouped_condition_nodeContext grouped_condition_node(int i) {
			return GetRuleContext<Grouped_condition_nodeContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Split_logic_nodeContext[] split_logic_node() {
			return GetRuleContexts<Split_logic_nodeContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public Split_logic_nodeContext split_logic_node(int i) {
			return GetRuleContext<Split_logic_nodeContext>(i);
		}
		public Any_nodeContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_any_node; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ISrDslParserListener typedListener = listener as ISrDslParserListener;
			if (typedListener != null) typedListener.EnterAny_node(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ISrDslParserListener typedListener = listener as ISrDslParserListener;
			if (typedListener != null) typedListener.ExitAny_node(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISrDslParserVisitor<TResult> typedVisitor = visitor as ISrDslParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitAny_node(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Any_nodeContext any_node() {
		Any_nodeContext _localctx = new Any_nodeContext(Context, State);
		EnterRule(_localctx, 8, RULE_any_node);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 125;
			Match(ANY);
			State = 127;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			do {
				{
				{
				State = 126;
				_localctx._grouped_condition_node = grouped_condition_node();
				_localctx._conditions.Add(_localctx._grouped_condition_node);
				}
				}
				State = 129;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & 67648L) != 0) );
			State = 131;
			Match(DO);
			State = 133;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			do {
				{
				{
				State = 132;
				_localctx._split_logic_node = split_logic_node();
				_localctx._logic.Add(_localctx._split_logic_node);
				}
				}
				State = 135;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & 70368744719392L) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class All_nodeContext : ParserRuleContext {
		public Grouped_condition_nodeContext _grouped_condition_node;
		public IList<Grouped_condition_nodeContext> _conditions = new List<Grouped_condition_nodeContext>();
		public Split_logic_nodeContext _split_logic_node;
		public IList<Split_logic_nodeContext> _logic = new List<Split_logic_nodeContext>();
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ALL() { return GetToken(SrDslParser.ALL, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode DO() { return GetToken(SrDslParser.DO, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public Grouped_condition_nodeContext[] grouped_condition_node() {
			return GetRuleContexts<Grouped_condition_nodeContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public Grouped_condition_nodeContext grouped_condition_node(int i) {
			return GetRuleContext<Grouped_condition_nodeContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Split_logic_nodeContext[] split_logic_node() {
			return GetRuleContexts<Split_logic_nodeContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public Split_logic_nodeContext split_logic_node(int i) {
			return GetRuleContext<Split_logic_nodeContext>(i);
		}
		public All_nodeContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_all_node; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ISrDslParserListener typedListener = listener as ISrDslParserListener;
			if (typedListener != null) typedListener.EnterAll_node(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ISrDslParserListener typedListener = listener as ISrDslParserListener;
			if (typedListener != null) typedListener.ExitAll_node(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISrDslParserVisitor<TResult> typedVisitor = visitor as ISrDslParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitAll_node(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public All_nodeContext all_node() {
		All_nodeContext _localctx = new All_nodeContext(Context, State);
		EnterRule(_localctx, 10, RULE_all_node);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 137;
			Match(ALL);
			State = 139;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			do {
				{
				{
				State = 138;
				_localctx._grouped_condition_node = grouped_condition_node();
				_localctx._conditions.Add(_localctx._grouped_condition_node);
				}
				}
				State = 141;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & 67648L) != 0) );
			State = 143;
			Match(DO);
			State = 145;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			do {
				{
				{
				State = 144;
				_localctx._split_logic_node = split_logic_node();
				_localctx._logic.Add(_localctx._split_logic_node);
				}
				}
				State = 147;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & 70368744719392L) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Gcn_optContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public Bounds_groupedContext bounds_grouped() {
			return GetRuleContext<Bounds_groupedContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Event_listen_groupContext event_listen_group() {
			return GetRuleContext<Event_listen_groupContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Bounds_object_groupedContext bounds_object_grouped() {
			return GetRuleContext<Bounds_object_groupedContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Bounds_object_size_groupedContext bounds_object_size_grouped() {
			return GetRuleContext<Bounds_object_size_groupedContext>(0);
		}
		public Gcn_optContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_gcn_opt; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ISrDslParserListener typedListener = listener as ISrDslParserListener;
			if (typedListener != null) typedListener.EnterGcn_opt(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ISrDslParserListener typedListener = listener as ISrDslParserListener;
			if (typedListener != null) typedListener.ExitGcn_opt(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISrDslParserVisitor<TResult> typedVisitor = visitor as ISrDslParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitGcn_opt(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Gcn_optContext gcn_opt() {
		Gcn_optContext _localctx = new Gcn_optContext(Context, State);
		EnterRule(_localctx, 12, RULE_gcn_opt);
		try {
			State = 153;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,8,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 149;
				bounds_grouped();
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 150;
				event_listen_group();
				}
				break;
			case 3:
				EnterOuterAlt(_localctx, 3);
				{
				State = 151;
				bounds_object_grouped();
				}
				break;
			case 4:
				EnterOuterAlt(_localctx, 4);
				{
				State = 152;
				bounds_object_size_grouped();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}
